# zero2prod-rust

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.yaml  spec.yaml
.github/workflows/: main.yml
migrations/: 20250316010535_create_subscriptions_table.sql
scripts/: init_db.sh  migrate_db.sh  pgadmin_init.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
